Fix the p extra padding in style.css.

--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ p {
     color: #344563;
     font-size: 16px;
     font-weight: 400;
+    padding: 0px;
 }
 
 .lets-connect h3 {
